# guacamole-viewer

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  FavoritesViewer.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  db.rs  fa.rs  lib.rs  library.rs  main.rs
